# quantum_macaroni

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
boltzpy/: __init__.py
boltzpy/calculators/: __init__.py  transport.py
boltzpy/core/: constants.py  numerics.py  symmetry.py
boltzpy/interpolation/: __init__.py  skw.py
boltzpy/mesh/: __init__.py  tetrahedron.py
boltzpy/parsers/: __init__.py  base.py  fleur_outxml.py
examples/PbTe-nospin/: boltz.py
openspec/changes/archive/2026-04-23-add-agents-md/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-refactor-and-docs-improvement/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-refactor-and-docs-improvement/specs/code-quality/: spec.md
openspec/specs/agents-md/: spec.md
quantum_macaroni/: __init__.py
quantum_macaroni/calculators/: __init__.py  base.py  transport.py
quantum_macaroni/core/: __init__.py  constants.py  numerics.py
quantum_macaroni/interpolation/: __init__.py  skw.py
quantum_macaroni/mesh/: __init__.py  tetrahedron.py
quantum_macaroni/parsers/: __init__.py  fleur_outxml.py
