[project]
name = "quantum_macaroni"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.28.0",
    "lxml>=6.0.2",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[tool.setuptools.packages.find]
include = ["quantum_macaroni*"]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest>=9.0.2",
    "pytest-coverage>=0.0",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]
